fixed body overflow bug on larger screens

--- a/src/components/Pagination/NumberOfDataToShow/NumberOfDataToShow.styles.scss
+++ b/src/components/Pagination/NumberOfDataToShow/NumberOfDataToShow.styles.scss
@@ -32,6 +32,7 @@
       list-style: none;
       padding: 0;
       margin: 0;
+      border: 1px solid #213f7d1a;
       border-radius: 4px 4px 0 0;
 
       &-option {
